cluster/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inetsoft-mysql
  labels:
    app: inetsoft-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inetsoft-mysql
  template:
    metadata:
      labels:
        app: inetsoft-mysql
    spec:
      containers:
        - name: inetsoft-mysql
          image: mysql:5
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1Gi"
              cpu: "2"
            limits:
              memory: "1Gi"
              cpu: "2"
          ports:
            - name: mysql
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysqldata
      volumes:
        - name: mysqldata
          persistentVolumeClaim:
            claimName: inetsoft-mysql-pvc
