cluster/statefulset-scheduler.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: inetsoft-scheduler
spec:
  selector:
    matchLabels:
      app: inetsoft-scheduler
  serviceName: inetsoft-scheduler
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: inetsoft-scheduler
    spec:
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
        - name: inetsoft-docker-secret
      containers:
        - name: inetsoft-scheduler
          image: docker.inetsoft.com/inetsoft/scheduler:2021.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
            limits:
              memory: "2Gi"
              cpu: "2"
          ports:
            - name: rmi
              containerPort: 1099
              protocol: TCP
          startupProbe:
            exec:
              command:
                - /usr/local/inetsoft/bin/probe.sh
                - readiness
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 30
            timeoutSeconds: 10
          livenessProbe:
            exec:
              command:
                - /usr/local/inetsoft/bin/probe.sh
                - liveness
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - /usr/local/inetsoft/bin/probe.sh
                - readiness
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: "/var/lib/inetsoft/shared"
              name: inetsoft-shared
            - mountPath: "/var/lib/inetsoft/local/bs"
              name: inetsoft-mv
      volumes:
        - name: inetsoft-shared
          persistentVolumeClaim:
            claimName: inetsoft-shared-pvc
  volumeClaimTemplates:
    - metadata:
        name: inetsoft-mv
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 100Mi
