cluster/service-scheduler.yaml
apiVersion: v1
kind: Service
metadata:
  name: inetsoft-scheduler-mysql
  labels:
    app: inetsoft-scheduler-mysql
spec:
  ports:
    - port: 3306
      protocol: TCP
  clusterIP: None
  selector:
    app: inetsoft-scheduler-mysql
